Another z-index fix

--- a/web/app/themes/brian-thompson/assets/styles/components/_popup.scss
+++ b/web/app/themes/brian-thompson/assets/styles/components/_popup.scss
@@ -25,9 +25,6 @@
   .blinds{
     z-index: $z-popup-blinds;
   }
-  .content-holder{
-    z-index: $z-popup-content;
-  }
 
   &.showing {
     height: 100%;
@@ -39,7 +36,7 @@
   }
 
   .body-wrap {
-    // z-index: $z-popup-content;
+    z-index: $z-popup-content;
     margin-right: 0;
     margin-top: 0;
     padding-top:  $lh * 6;
